@@ -1,57 +1,41 @@
 package com.ourpos.auth.config;
 
 import java.util.Collections;
-import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
-import com.ourpos.auth.jwt.CustomerLogoutFilter;
+import com.ourpos.auth.jwt.CustomLogoutFilter;
 import com.ourpos.auth.jwt.JwtFilter;
 import com.ourpos.auth.jwt.JwtUtil;
-import com.ourpos.auth.jwt.ManagerLoginFilter;
 import com.ourpos.auth.oauth2.CustomClientRegistrationRepo;
-import com.ourpos.auth.oauth2.CustomFailureHandler;
 import com.ourpos.auth.oauth2.CustomSuccessHandler;
-import com.ourpos.auth.service.CustomerOAuth2CustomerService;
+import com.ourpos.auth.service.CustomOAuth2CustomerService;
 
 import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
 @EnableWebSecurity
-@EnableMethodSecurity(securedEnabled = true, prePostEnabled = true)
 @Configuration
 public class SecurityConfig {
 
-    private final CustomerOAuth2CustomerService customerOAuth2CustomerService;
+    private static final String[] hasRoleSuperAdmin_GET = {};
+    private static final String[] hasRoleSuperAdmin_POST = {};
+    private static final String[] hasRoleSuperAdmin_PUT = {};
+
+    private final CustomOAuth2CustomerService customOAuth2CustomerService;
     private final CustomSuccessHandler customSuccessHandler;
-    private final CustomFailureHandler customFailureHandler;
     private final CustomClientRegistrationRepo customClientRegistrationRepo;
-    private final AuthenticationConfiguration authenticationConfiguration;
     private final JwtUtil jwtUtil;
-
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
-        return configuration.getAuthenticationManager();
-    }
-
-    @Bean
-    public BCryptPasswordEncoder bCryptPasswordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -61,7 +45,7 @@ public class SecurityConfig {
 
                 CorsConfiguration configuration = new CorsConfiguration();
 
-                configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:3001"));
+                configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
                 configuration.setAllowedMethods(Collections.singletonList("*"));
                 configuration.setAllowCredentials(true);
                 configuration.setAllowedHeaders(Collections.singletonList("*"));
@@ -77,39 +61,30 @@ public class SecurityConfig {
             .csrf(AbstractHttpConfigurer::disable);
 
         http
-            .formLogin(AbstractHttpConfigurer::disable)
-            .exceptionHandling(exceptionHandling -> exceptionHandling
-                .authenticationEntryPoint((request, response, authException) -> response.setStatus(401))
-                .accessDeniedHandler((request, response, accessDeniedException) -> response.setStatus(403)));
+            .formLogin(AbstractHttpConfigurer::disable);
 
         http
             .httpBasic(AbstractHttpConfigurer::disable);
 
         http
             .addFilterAfter(new JwtFilter(jwtUtil), OAuth2LoginAuthenticationFilter.class)
-            .addFilterBefore(new CustomerLogoutFilter(jwtUtil), LogoutFilter.class);
+            .addFilterBefore(new CustomLogoutFilter(jwtUtil), LogoutFilter.class);
 
         http
             .oauth2Login(oauth2 -> oauth2
                 .clientRegistrationRepository(customClientRegistrationRepo.clientRegistrationRepository())
                 .userInfoEndpoint(userInfo -> userInfo
-                    .userService(customerOAuth2CustomerService)
+                    .userService(customOAuth2CustomerService)
                 )
                 .successHandler(customSuccessHandler)
-                .failureHandler(customFailureHandler)
             );
-
-        ManagerLoginFilter loginFilter =
-            new ManagerLoginFilter(authenticationManager(authenticationConfiguration), jwtUtil);
-
-        loginFilter.setFilterProcessesUrl("/managers/login");
-
-        http
-            .addFilterAt(loginFilter, UsernamePasswordAuthenticationFilter.class);
 
         http
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/managers/login", "/login").permitAll()
+                .requestMatchers(HttpMethod.GET, hasRoleSuperAdmin_GET).hasRole("SUPER_ADMIN")
+                .requestMatchers(HttpMethod.POST, hasRoleSuperAdmin_POST).hasRole("SUPER_ADMIN")
+                .requestMatchers(HttpMethod.PUT, hasRoleSuperAdmin_PUT).hasRole("SUPER_ADMIN")
+                .requestMatchers("/**").permitAll()
                 .anyRequest().authenticated());
 
         http
